--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=CarRentalDB;Username=postgres;Password=password"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
