--- a/CarRental.ntier.BLL/CarRental.ntier.BLL.csproj
+++ b/CarRental.ntier.BLL/CarRental.ntier.BLL.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Models\" />
     <Folder Include="Utilities\" />
     <Folder Include="Services\IServices\" />
     <Folder Include="Validators\" />
