--- a/CarRental/CarRental.ntier.API.csproj
+++ b/CarRental/CarRental.ntier.API.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Models\Responses\" />
+    <Folder Include="Models\Requests\" />
   </ItemGroup>
 
 </Project>
