--- a/CarRental.ntier.BLL/CarRental.ntier.BLL.csproj
+++ b/CarRental.ntier.BLL/CarRental.ntier.BLL.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Extensions\" />
     <Folder Include="Utilities\" />
-    <Folder Include="Services\IServices\" />
     <Folder Include="Validators\" />
   </ItemGroup>
 
