--- a/CarRental.ntier.BLL/CarRental.ntier.BLL.csproj
+++ b/CarRental.ntier.BLL/CarRental.ntier.BLL.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
+    <Folder Include="Services\" />
     <Folder Include="Utilities\" />
     <Folder Include="Validators\" />
   </ItemGroup>
