--- a/CarRental.ntier.BLL/CarRental.BLL.csproj
+++ b/CarRental.ntier.BLL/CarRental.BLL.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CarRental.ntier.DAL\CarRental.ntier.DAL.csproj" />
+    <ProjectReference Include="..\CarRental.ntier.DAL\CarRental.DAL.csproj" />
   </ItemGroup>
 
 </Project>
