replace ntier, add .API to API layer

--- a/CarRental.API/CarRental.API.csproj
+++ b/CarRental.API/CarRental.API.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CarRental.ntier.BLL\CarRental.BLL.csproj" />
+	  <ProjectReference Include="..\CarRental.BLL\CarRental.BLL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
