Revert "replace ntier, add .API to API layer"
This reverts commit 3825b26d20fbb682a6e50acfbff428c2a216f8cb.

--- a/CarRental.ntier.BLL/CarRental.BLL.csproj
+++ b/CarRental.ntier.BLL/CarRental.BLL.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CarRental.DAL\CarRental.DAL.csproj" />
+    <ProjectReference Include="..\CarRental.ntier.DAL\CarRental.DAL.csproj" />
   </ItemGroup>
 
 </Project>
