--- a/CarRental/CarRental.ntier.API.csproj
+++ b/CarRental/CarRental.ntier.API.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CarRental.ntier.BLL\CarRental.BLL.csproj" />
+    <ProjectReference Include="..\CarRental.ntier.BLL\CarRental.ntier.BLL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
