--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,19 +42,28 @@ jobs:
 
       - name: Build and analyze
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Для анализа PR
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
+          PR_KEY: ${{ github.event.pull_request.number }}
+          PR_BRANCH: ${{ github.event.pull_request.head.ref }}
+          PR_BASE: ${{ github.event.pull_request.base.ref }}
+        run: | 
+          PR_ARGS=""
+          if [ -n "$PR_KEY" ]; then
+            PR_ARGS="\
+              /d:sonar.pullrequest.key=$PR_KEY \
+              /d:sonar.pullrequest.branch=$PR_BRANCH \
+              /d:sonar.pullrequest.base=$PR_BASE"
+          fi
+          
           dotnet sonarscanner begin \
             /k:"lammeranssss_CarRent" \
             /o:"lammeranssss" \
             /d:sonar.login="${{ env.SONAR_TOKEN }}" \
             /d:sonar.host.url="https://sonarcloud.io" \
             /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" \
-            /d:sonar.pullrequest.key="${{ github.event.pull_request.number }}" \
-            /d:sonar.pullrequest.branch="${{ github.event.pull_request.head.ref }}" \
-            /d:sonar.pullrequest.base="${{ github.event.pull_request.base.ref }}" \
-            /d:sonar.scm.revision="${{ github.sha }}"
+            /d:sonar.scm.revision="${{ github.sha }}" \
+            $PR_ARGS
 
           dotnet restore CarRental.sln
 
