--- a/CarRental.API/appsettings.json
+++ b/CarRental.API/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "https://dev-vubzc0z1eb3p2qyu.us.auth0.com",
+    "Audience": "https://api.carrental.com"
+  }
 }
