--- a/CarRental.BLL/CarRental.BLL.csproj
+++ b/CarRental.BLL/CarRental.BLL.csproj
@@ -13,7 +13,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="15.0.1" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
+		<PackageReference Include="CarRental.Messaging" Version="1.1.0" />
+		<PackageReference Include="CarRental.Utilities" Version="1.1.0" />
+		<PackageReference Include="MassTransit" Version="8.5.5" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.10" />
 	</ItemGroup>
 
 	<ItemGroup>
