make secret information more safe

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   carrental.api:
     image: carrental-api-image
@@ -5,13 +7,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        - GITHUB_USER=${GITHUB_USER}
-        - GITHUB_TOKEN=${GITHUB_TOKEN}
+      secrets:
+        - github_user
+        - github_token
     ports:
       - "8080:8080"
     environment:
-      - GITHUB_TOKEN=${GITHUB_TOKEN}
       - MongoDatabaseSettings__ConnectionString=${API_MONGO_CONN_STRING}
       - RabbitMQ__Host=rabbitmq
       - ConnectionStrings__DefaultConnection=${API_POSTGRES_CONN_STRING}
@@ -27,11 +28,10 @@ services:
     build:
       context: ../NotificationService
       dockerfile: Dockerfile
-      args:
-        - GITHUB_USER=${GITHUB_USER}
-        - GITHUB_TOKEN=${GITHUB_TOKEN}
+      secrets:
+        - github_user
+        - github_token
     environment:
-      - GITHUB_TOKEN=${GITHUB_TOKEN}
       - MongoDbSettings__ConnectionString=${NOTIFIER_MONGO_CONN_STRING}
       - MongoDbSettings__DatabaseName=${NOTIFIER_MONGO_DB_NAME}
       - MongoDbSettings__CollectionName=${NOTIFIER_MONGO_COLLECTION_NAME}
@@ -81,3 +81,9 @@ services:
 volumes:
   postgres_data:
   rabbitmq_data:
+
+secrets:
+  github_user:
+    file: ./secrets/github_user.txt
+  github_token:
+    file: ./secrets/github_token.txt
